--- a/php/src/shared/ui/sidebar.css
+++ b/php/src/shared/ui/sidebar.css
@@ -9,3 +9,9 @@
 .sidebar__item:hover, .sidebar__item--active {
     background-color: var(--gray-200);
 }
+
+.sidebar__buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
