--- a/php/src/shared/ui/layout.css
+++ b/php/src/shared/ui/layout.css
@@ -10,7 +10,7 @@ body {
 .container {
     width: 100%;
     margin: auto;
-    width: var(--container-width);
+    max-width: var(--container-width);
 }
 
 .layout__cols {
@@ -24,6 +24,11 @@ body {
 
 .layout__col--stretched {
     flex: 1;
+}
+
+.layout__col--sticky {
+    position: sticky;
+    top: calc(var(--header-h));
 }
 
 .tile {
@@ -49,6 +54,8 @@ body {
     width: 100vw;
     height: var(--header-h);
     background: var(--gray-50);
+    z-index: 1000;
+    border-bottom: 2px solid var(--gray-200);
 }
 
 .header__title {
