Complete ajaxing products and reports and report pages

--- a/php/src/shared/styles/global.css
+++ b/php/src/shared/styles/global.css
@@ -11,3 +11,11 @@ a {
     text-decoration: none;
     color: var(--gray-950);
 }
+
+button {
+    border: none;
+    padding: 0 0;
+    background-color: transparent;
+    font-size: 14px;
+    cursor: pointer;
+}
