--- a/php/src/shared/styles/ui.css
+++ b/php/src/shared/styles/ui.css
@@ -40,30 +40,26 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    border: solid 2px;
 
-    color: var(--gray-900);
-    background-color: var(--blue-100);
-    border-color: var(--blue-200);
+    color: var(--gray-50);
+    background-color: var(--blue-400);
 }
 
 .button:hover {
-    background-color: var(--blue-200);
+    background-color: var(--blue-500);
 }
 
 .button.warning {
     color: var(--gray-900);
-    background-color: var(--yellow-200);
+    background-color: var(--yellow-300);
 }
 
 .button.danger {
-    color: var(--gray-900);
-    background-color: var(--red-100);
-    border-color: var(--red-200);
+    background-color: var(--red-400);
 }
 
 .button.danger:hover {
-    background-color: var(--red-200);
+    background-color: var(--red-500);
 }
 
 .input {
@@ -72,6 +68,7 @@
     border-radius: 8px;
     border: none;
     box-shadow: 0 0 0 1px var(--gray-300);
+    font-size: 14px;
 }
 
 .input:focus-visible {
